# Parlo

./: .gitignore  AGENTS.md  README.md
backend/: .env.example  README.md  config.yaml.example  pyproject.toml
backend/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  storage.py
backend/app/api/: __init__.py  chat.py  conversations.py  messages.py  models.py  profiles.py
backend/app/providers/: __init__.py  anthropic_message.py  base.py  openai_response.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_providers.py
frontend/: README.md  analysis_options.yaml  build.yaml  design.md  design.pen  pubspec.yaml
frontend/lib/: app.dart  main.dart  main_mobile.dart
frontend/lib/core/auth/: auth_providers.dart  auth_store.dart
frontend/lib/core/models/: conversation.dart  conversation.freezed.dart  conversation.g.dart  message.dart  message.freezed.dart  message.g.dart  model.dart  model.freezed.dart  model.g.dart  profile.dart  profile.freezed.dart  profile.g.dart  requests.dart  requests.freezed.dart  requests.g.dart  sse_event.dart  sse_event.freezed.dart
frontend/lib/core/network/: api_client.dart  base_url_providers.dart  base_url_store.dart  sse_parser.dart
frontend/lib/core/platform/: mobile_capabilities.dart  platform_capabilities.dart  platform_providers.dart  web_capabilities.dart
frontend/test/: chat_providers_test.dart  image_data_url_test.dart  settings_panel_test.dart  sidebar_test.dart  sse_parser_test.dart  token_dialog_test.dart  widget_test.dart
frontend/web/: index.html  manifest.json
(+25 files in other folders)
